# rstorage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rstorage.c  rstorage.cmake  rstorage.h  rstorage_def.h
storage/: storage_fd.c  storage_fd.h  storage_mcu.c  storage_mcu.h
tests/: .clang-tidy  CMakeLists.txt  tests.c  tests.cpp
